# speexdroid

./: CMakeLists.txt  build.gradle
src/main/cpp/: echo_canceller.cpp
src/main/cpp/include/speex/: speex.h  speexdsp_config_types.h
src/main/cpp/libspeex/: arch.h  modes_wb.c  speex.c
src/main/java/com/speex/: EchoCanceller.java
